--- a/Thesis/content/5_experimentalsetup.tex
+++ b/Thesis/content/5_experimentalsetup.tex
@@ -12,13 +12,13 @@ We use 5 datasets in our experiments, PowerDemand, SMTP, HTTP, SMTP+HTTP and For
 \centering      
 \begin{tabular}{c c c c}  
 \hline\hline        
-Dataset & Size & Dimensionality & Anomaly proportion(\textperthousand) \\ [0.5ex] 
+Dataset & Size & Dimensionality & Anomaly proportion(\%) \\ [0.5ex] 
 \hline 
-PowerDemand & 35 040 & 1 &  21.92\\  
-SMTP & 96 554 & 34 & 12.25  \\ 
-HTTP & 623 091 & 34  & 6.49  \\ 
-SMTP+HTTP & 719 645 & 34 & 7.26 \\ 
-ForestCover & 581 012 & 7 & 3.53 \\ [1ex]  
+PowerDemand & 35 040 & 1 &  2.19\\  
+SMTP & 96 554 & 34 & 1.23  \\ 
+HTTP & 623 091 & 34  & 0.65  \\ 
+SMTP+HTTP & 719 645 & 34 & 0.73 \\ 
+ForestCover & 581 012 & 7 & 0.35 \\ [1ex]  
 \hline    
 \end{tabular}
 \label{tab:dataset}  
