--- a/Thesis/content/0_abstract.tex
+++ b/Thesis/content/0_abstract.tex
@@ -1,4 +1,4 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 \label{chap:abstract}
-The amount and variety of data stream generated from applications of different domain grows steadily and are valuable for big data research. One of the most important core component is the anomaly detection for streaming data, which has attracted attention and investigation in plenty of application areas, for example, the sensor data anomaly detection, predictive maintenance, event detection. Those efforts could potentially avoid large amount of financial costs in the manufacture. However, different from traditional anomaly detection tasks, anomaly detection in streaming data is especially difficult due to that data arrives over time with latent distribution changes, so that a single static model doesn’t fit streaming data all the time. An anomaly could become normal along with data changing in the stream, it is necessary to maintain a dynamic system that deals with this problem. In this paper, we propose a novel LSTMs-Autoencoder anomaly detection architecture specially designed for streaming data. This is a mini-batch based streaming processing approach. We experimented with streaming datasets containing different kinds of anomalies as well as distribution changes, and the results suggest that our model can sufficiently detect anomaly in data stream and update model timely to fit the latest data property.
+The high volume and velocity data stream generated from devices or applications from different domains grows steadily and are valuable for big data research. One of the most important topic is the anomaly detection for streaming data, which has attracted attention and investigation in plenty of areas, for example, the sensor data anomaly detection, predictive maintenance, event detection. Those efforts could potentially avoid large amount of financial costs in the manufacture. However, different from traditional anomaly detection tasks, anomaly detection in streaming data is especially difficult due to that data arrives along with the time with latent distribution changes, so that a single static model doesn’t fit streaming data all the time. An anomaly could become normal during the data changing in stream, it is necessary to maintain a dynamic system that deals with this problem. In this work, we propose a LSTMs-Autoencoder anomaly detection architecture specially designed for streaming data. This is a mini-batch based streaming processing approach. We experimented with streaming data that containing different kinds of anomalies as well as concept drifts, and the results suggest that our model can sufficiently detect anomaly from data stream and update model timely to fit the latest data property.
